--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,10 @@
   margin: auto;
   cursor: pointer;
 }
+/* Force Lightbox arrows to always show */
+.lb-prev, .lb-next {
+  opacity: 1 !important;
+  visibility: visible !important;
+}
 
 /* You can add more styles here later */
